--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexaoPadrao": "Server=localhost;Database=geral;TrustServerCertificate=True;"
+    "ConexaoPadrao": "Server=localhost;Database=geral;User Id=raphael;Password=teste;TrustServerCertificate=True;"
   }
 }
